Chapter 13 — Listing 13.9: FluentTransformations.java Demonstrates: Declarative list transformation using removeIf, replaceAll, sort, forEach